<?xml version="1.0"?>
<package format="2">
  <name>ekf_fusion</name>
  <version>0.0.1</version>
  <description>EKF Fusion for IMU, LiDAR, and Sonar</description>
  <maintainer email="pranavkolekar13@gmail.com">Pranav Kolekar</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
